Add ssh auth with port setting (requires patched GC3Pie!).

--- a/python/gc3pie/gc3pie.conf
+++ b/python/gc3pie/gc3pie.conf
@@ -14,6 +14,12 @@ type = none
 [auth/ssh_ehrenfeu]
 type = ssh
 username = ehrenfeu
+port = 22
+
+[auth/ssh_ehrenfeu_22022]
+type = ssh
+username = ehrenfeu
+port = 22022
 
 [resource/localhost]
 enabled = yes
@@ -40,3 +46,16 @@ max_cores_per_job = 4
 max_memory_per_core = 2
 max_walltime = 2
 
+[resource/hucore_ssh]
+enabled = yes
+type = shellcmd
+# auth = ssh_ehrenfeu_22022
+auth = ssh_ehrenfeu
+frontend = hucore.test.nl
+transport = ssh
+time_cmd = /usr/bin/time
+architecture = x86_64
+max_cores = 4
+max_cores_per_job = 4
+max_memory_per_core = 2
+max_walltime = 2
