Disable resources so only one "node" is active.

--- a/python/gc3pie/gc3pie.conf
+++ b/python/gc3pie/gc3pie.conf
@@ -21,7 +21,7 @@ username = ehrenfeu
 port = 22022
 
 [resource/localhost]
-enabled = yes
+enabled = no
 type = shellcmd
 auth = noauth
 transport = local
@@ -33,7 +33,7 @@ max_walltime = 2
 architecture = x64_64
 
 [resource/irrlicht]
-enabled = yes
+enabled = no
 type = shellcmd
 auth = ssh_ehrenfeu
 frontend = irrlicht
